mattermost/mattermost-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
spec:
  ports:
  - name: http
    port: 8065
    targetPort: 8065
  selector:
    app: mattermost
